--- a/formPage.html
+++ b/formPage.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Login Pagina</title>
+    <title>Klachtenformulier</title>
   </head>
   <body></body>
-  <script src="./components/Authentication.js"></script>
+  <script src="./components/Form.js"></script>
 </html>
